--- a/package.json
+++ b/package.json
@@ -6,6 +6,15 @@
   "author": "Deni Cho <denichodev@gmail.com>",
   "license": "MIT",
   "devDependencies": {
-    "app-root-dir": "1.0.2"
+    "app-root-dir": "1.0.2",
+    "babel-eslint": "10.0.1",
+    "eslint": "5.6.1",
+    "eslint-config-airbnb": "17.1.0",
+    "eslint-config-prettier": "3.1.0",
+    "eslint-import-resolver-webpack": "0.10.1",
+    "eslint-plugin-import": "2.14.0",
+    "eslint-plugin-jsx-a11y": "6.1.2",
+    "eslint-plugin-prettier": "3.0.0",
+    "eslint-plugin-react": "7.11.1"
   }
 }
