--- a/package.json
+++ b/package.json
@@ -6,7 +6,13 @@
   "author": "Deni Cho <denichodev@gmail.com>",
   "license": "MIT",
   "devDependencies": {
+    "@babel/core": "7.1.6",
+    "@babel/node": "7.0.0",
+    "@babel/polyfill": "7.0.0",
+    "@babel/preset-env": "7.1.6",
+    "@babel/register": "7.0.0",
     "app-root-dir": "1.0.2",
+    "ava": "1.0.0-rc.2",
     "babel-eslint": "10.0.1",
     "eslint": "5.6.1",
     "eslint-config-airbnb": "17.1.0",
@@ -15,7 +21,8 @@
     "eslint-plugin-import": "2.14.0",
     "eslint-plugin-jsx-a11y": "6.1.2",
     "eslint-plugin-prettier": "3.0.0",
-    "eslint-plugin-react": "7.11.1"
+    "eslint-plugin-react": "7.11.1",
+    "regenerator-runtime": "0.13.1"
   },
   "dependencies": {
     "rethinkdb-migrate": "1.4.0"
@@ -23,6 +30,31 @@
   "scripts": {
     "db:seed": "node services/db/migrations/seed",
     "db:migrate": "npm run rethinkdb:migrate -- up",
-    "rethinkdb:migrate": "rethinkdb-migrate -f ./services/db/migrations/config.js"
+    "rethinkdb:migrate": "rethinkdb-migrate -f ./db/migrations/config.js",
+    "test": "ava",
+    "test:watch": "ava --watch"
+  },
+  "ava": {
+    "files": [
+      "services/**/tests/*.test.js"
+    ],
+    "sources": [
+      "services/keys/src/**/*.js"
+    ],
+    "cache": true,
+    "concurrency": 5,
+    "verbose": true,
+    "compileEnhancements": false,
+    "require": [
+      "@babel/register",
+      "@babel/polyfill"
+    ],
+    "babel": {
+      "testOptions": {
+        "presets": [
+          "@babel/preset-env"
+        ]
+      }
+    }
   }
 }
