--- a/package.json
+++ b/package.json
@@ -6,14 +6,13 @@
   "author": "Deni Cho <denichodev@gmail.com>",
   "license": "MIT",
   "devDependencies": {
-    "@babel/core": "7.1.6",
-    "@babel/node": "7.0.0",
     "@babel/polyfill": "7.0.0",
     "@babel/preset-env": "7.1.6",
     "@babel/register": "7.0.0",
     "app-root-dir": "1.0.2",
     "ava": "1.0.0-rc.2",
     "babel-eslint": "10.0.1",
+    "better-npm-run": "0.1.1",
     "eslint": "5.6.1",
     "eslint-config-airbnb": "17.1.0",
     "eslint-config-prettier": "3.1.0",
@@ -22,9 +21,11 @@
     "eslint-plugin-jsx-a11y": "6.1.2",
     "eslint-plugin-prettier": "3.0.0",
     "eslint-plugin-react": "7.11.1",
-    "regenerator-runtime": "0.13.1"
+    "supertest": "3.3.0"
   },
   "dependencies": {
+    "backpack-core": "0.8.2",
+    "fastify": "1.13.0",
     "rethinkdb-migrate": "1.4.0"
   },
   "scripts": {
@@ -32,11 +33,20 @@
     "db:migrate": "npm run rethinkdb:migrate -- up",
     "rethinkdb:migrate": "rethinkdb-migrate -f ./db/migrations/config.js",
     "test": "ava",
-    "test:watch": "ava --watch"
+    "test:watch": "ava --watch",
+    "keys:dev": "bnr keys:dev"
+  },
+  "betterScripts": {
+    "keys:dev": {
+      "command": "backpack",
+      "env": {
+        "DIR": "services/keys"
+      }
+    }
   },
   "ava": {
     "files": [
-      "services/**/tests/*.test.js"
+      "services/keys/tests/*.test.js"
     ],
     "sources": [
       "services/keys/src/**/*.js"
