--- a/services/keys/package.json
+++ b/services/keys/package.json
@@ -7,6 +7,7 @@
   "license": "MIT",
   "dependencies": {
     "fastify": "1.13.0",
-    "rethinkdbdash": "2.3.31"
+    "rethinkdbdash": "2.3.31",
+    "source-map-support": "0.5.9"
   }
 }
