--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,21 +5,23 @@ image: docker:latest
 services:
   - docker:dind
 
-before_script:
-  - docker login -u "$CI_REGISTRY_USER" -p "$CI_REGISTRY_PASSWORD" $CI_REGISTRY
+stages:
+  - build
 
-build-master:
-  stage: build
-  script:
-    - docker build --pull -t "$CI_REGISTRY_IMAGE" .
-    - docker push "$CI_REGISTRY_IMAGE"
-  only:
-    - master
+variables:
+  TEST_TAG: $CI_COMMIT_REF_NAME
+
+before_script:
+  - apk add --no-cache py-pip
+  - pip install docker-compose
+  - docker login -u "$CI_REGISTRY_USER" -p "$CI_REGISTRY_PASSWORD" $CI_REGISTRY
 
 build:
   stage: build
   script:
-    - docker build --pull -t "$CI_REGISTRY_IMAGE:$CI_COMMIT_REF_SLUG" .
-    - docker push "$CI_REGISTRY_IMAGE:$CI_COMMIT_REF_SLUG"
-  except:
+    - TAG=$TEST_TAG docker-compose -f docker-compose-prod.yml build --pull keys
+    - TAG=$TEST_TAG docker-compose -f docker-compose-prod.yml build --pull nginx
+    - docker push "$CI_REGISTRY_IMAGE/keys:$TEST_TAG"
+    - docker push "$CI_REGISTRY_IMAGE/keys:$TEST_TAG"
+  only:
     - master
