--- a/services/nginx/Dockerfile
+++ b/services/nginx/Dockerfile
@@ -1,4 +1,4 @@
 FROM nginx:1.15.0-alpine
 
 RUN rm /etc/nginx/conf.d/default.conf
-COPY /prod.conf /etc/nginx/conf.d
+COPY services/nginx/prod.conf /etc/nginx/conf.d
