--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -20,8 +20,8 @@ before_script:
 build-keys:
   stage: build
   script:
-    - docker build -f services/keys/Dockerfile . -t $KEYS_TEST_TAG
-    - docker push $KEYS_TEST_TAG
+    - docker build -f services/keys/Dockerfile . -t "$KEYS_TEST_TAG"
+    - docker push "$KEYS_TEST_TAG"
   only:
     changes:
       - package.json
@@ -32,8 +32,8 @@ build-keys:
 build-nginx:
   stage: build
   script: 
-    - docker build -f services/nginx/Dockerfile . -t $NGINX_TEST_TAG
-    - docker push $NGINX_TEST_TAG
+    - docker build -f services/nginx/Dockerfile . -t "$NGINX_TEST_TAG"
+    - docker push "$NGINX_TEST_TAG"
   only:
     changes:
       - services/nginx/**/*
