--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,8 +7,8 @@ stages:
   - build
 
 variables:
-  KEYS_IMAGE: $CI_REGISTRY_IMAGE/keys
-  NGINX_IMAGE: $CI_REGISTRY_IMAGE/nginx
+  KEYS_IMAGE: "$CI_REGISTRY_IMAGE/keys"
+  NGINX_IMAGE: "$CI_REGISTRY_IMAGE/nginx"
   KEYS_TEST_TAG: "$KEYS_IMAGE:$CI_COMMIT_REF_NAME"
   NGINX_TEST_TAG: "$NGINX_IMAGE:$CI_COMMIT_REF_NAME"
   KEYS_RELEASE_TAG: "$KEYS_IMAGE:latest"
