--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -21,15 +21,15 @@ before_script:
 test-keys:
   stage: test
   script:
-    - docker build --target dependencies -f services/keys/Dockerfile . -t "$KEYS_TEST_TAG"
-    - docker run "$KEYS_TEST_TAG" yarn test
-    - docker push "$KEYS_TEST_TAG"
+    - docker build --target dependencies -f services/keys/Dockerfile . -t "${KEYS_TEST_TAG}-deps"
+    - docker run "${KEYS_TEST_TAG}-deps" yarn test
+    - docker push "${KEYS_TEST_TAG}-deps"
 
 build-keys:
   stage: build
   script:
-    - docker pull "$KEYS_TEST_TAG"
-    - docker build --cache-from "$KEYS_TEST_TAG" -f services/keys/Dockerfile . -t "$KEYS_TEST_TAG"
+    - docker pull "${KEYS_TEST_TAG}-deps"
+    - docker build --cache-from "${KEYS_TEST_TAG}-deps" -f services/keys/Dockerfile . -t "$KEYS_TEST_TAG"
     - docker push "$KEYS_TEST_TAG"
   only:
     changes:
