Failsafe docker pull

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -21,7 +21,7 @@ before_script:
 test-keys:
   stage: test
   script:
-    - docker pull "${KEYS_TEST_TAG}-deps"
+    - docker pull "${KEYS_TEST_TAG}-deps" || true
     - docker build --target dependencies --cache-from "${KEYS_TEST_TAG}-deps" -f services/keys/Dockerfile . -t "${KEYS_TEST_TAG}-deps"
     - docker run "${KEYS_TEST_TAG}-deps" yarn test
     - docker push "${KEYS_TEST_TAG}-deps"
@@ -29,7 +29,7 @@ test-keys:
 build-keys:
   stage: build
   script:
-    - docker pull "${KEYS_TEST_TAG}-deps"
+    - docker pull "${KEYS_TEST_TAG}-deps" || true
     - docker build --cache-from "${KEYS_TEST_TAG}-deps" -f services/keys/Dockerfile . -t "$KEYS_TEST_TAG"
     - docker push "$KEYS_TEST_TAG"
   only:
