--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -58,7 +58,7 @@ deploy-keys:
     - apk add --update --no-cache openssh sshpass
   script:
     - sshpass -v
-    - ./scripts/deploy.sh $SSH_PASS $CI_REGISTRY_USER $CI_REGISTRY_PASSWORD
+    - ./scripts/deploy_keys.sh $SSH_PASS $CI_REGISTRY_USER $CI_REGISTRY_PASSWORD
   when: manual
   only:
     - master
