--- a/services/nginx/prod.conf
+++ b/services/nginx/prod.conf
@@ -3,7 +3,7 @@ server {
   listen 80;
 
   location /api {
-    proxy_pass        http://0.0.0.0:3123;
+    proxy_pass        http://keys:3000;
     proxy_redirect    default;
     proxy_set_header  Host $host;
     proxy_set_header  X-Real-IP $remote_addr;
