--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -75,13 +75,13 @@ deploy-keys:
     <<: *global_variables
     CONTAINER_NAME: keys
     CONTAINER_NETWORK: bridge
-    CONTAINER_DETACHED: true
+    CONTAINER_DETACHED: 'true'
 
 deploy-nginx:
   <<: *deploy
   variables:
     <<: *global_variables
     CONTAINER_NAME: nginx
-    CONTAINER_PUBLISH: 80:80
+    CONTAINER_PUBLISH: '80:80'
     CONTAINER_NETWORK: bridge
-    CONTAINER_DETACHED: true
+    CONTAINER_DETACHED: 'true'
