--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -15,6 +15,7 @@ variables: &global_variables
   NGINX_TEST_TAG: $CI_REGISTRY_IMAGE/nginx:$CI_COMMIT_REF_NAME
   KEYS_RELEASE_TAG: $KEYS_IMAGE:latest
   NGINX_RELEASE_TAG: $NGINX_IMAGE:latest
+  DEPLOY_IMAGE: $CI_REGISTRY_IMAGE/deploy:1.0
 
 before_script:
   - docker login -u "$CI_REGISTRY_USER" -p "$CI_REGISTRY_PASSWORD" $CI_REGISTRY
@@ -85,3 +86,12 @@ deploy-nginx:
     CONTAINER_PUBLISH: '80:80'
     CONTAINER_NETWORK: unthicc
     CONTAINER_DETACHED: 'true'
+
+new-deployment:
+  stage: deploy
+  script:
+    - docker pull "${DEPLOY_IMAGE}"
+    - docker run -v $(pwd)/shared/deploy:/usr/app/deploy build:img $SSH_PRIVATE_KEY
+  when: manual
+  only:
+    - master
