--- a/package.json
+++ b/package.json
@@ -4,77 +4,5 @@
   "main": "index.js",
   "repository": "git@github.com:denichodev/unthicc.git",
   "author": "Deni Cho <denichodev@gmail.com>",
-  "license": "MIT",
-  "devDependencies": {
-    "@babel/polyfill": "7.0.0",
-    "@babel/preset-env": "7.1.6",
-    "@babel/register": "7.0.0",
-    "app-root-dir": "1.0.2",
-    "ava": "1.0.0-rc.2",
-    "babel-eslint": "10.0.1",
-    "better-npm-run": "0.1.1",
-    "cross-env": "^5.2.0",
-    "eslint": "5.6.1",
-    "eslint-config-airbnb": "17.1.0",
-    "eslint-config-prettier": "3.1.0",
-    "eslint-import-resolver-webpack": "0.10.1",
-    "eslint-plugin-import": "2.14.0",
-    "eslint-plugin-jsx-a11y": "6.1.2",
-    "eslint-plugin-prettier": "3.0.0",
-    "eslint-plugin-react": "7.11.1",
-    "supertest": "3.3.0"
-  },
-  "dependencies": {
-    "backpack-core": "0.8.2",
-    "fastify": "1.13.0",
-    "rethinkdbdash": "2.3.31"
-  },
-  "scripts": {
-    "db:seed": "node services/db/migrations/seed",
-    "db:migrate": "npm run rethinkdb:migrate -- up",
-    "rethinkdb:migrate": "rethinkdb-migrate -f ./db/migrations/config.js",
-    "test": "ava",
-    "test:watch": "ava --watch",
-    "keys:dev": "bnr keys:dev",
-    "keys:build": "bnr keys:build"
-  },
-  "betterScripts": {
-    "keys:dev": {
-      "command": "backpack",
-      "env": {
-        "DIR": "services/keys"
-      }
-    },
-    "keys:build": {
-      "command": "backpack build",
-      "env": {
-        "DIR": "services/keys",
-        "NODE_PATH": "./",
-        "NODE_ENV": "production"
-      }
-    }
-  },
-  "ava": {
-    "files": [
-      "services/keys/tests/*.test.js"
-    ],
-    "sources": [
-      "services/keys/src/**/*.js"
-    ],
-    "cache": true,
-    "concurrency": 5,
-    "verbose": false,
-    "compileEnhancements": false,
-    "require": [
-      "@babel/register",
-      "@babel/polyfill"
-    ],
-    "babel": {
-      "testOptions": {
-        "presets": [
-          "@babel/preset-env"
-        ]
-      }
-    }
-  }
+  "license": "MIT"
 }
